--- a/YTX_Android_IM_Demo_v5.2.1r_AndroidStudio/BQMM_Lib/build.gradle
+++ b/YTX_Android_IM_Demo_v5.2.1r_AndroidStudio/BQMM_Lib/build.gradle
@@ -1,12 +1,17 @@
 apply plugin: 'android-library'
 
 dependencies {
-    compile fileTree(dir: 'libs', include: '*.jar')
+    compile 'com.android.support:support-v4:23.2.1'
+    compile files('libs/bqmm_v1.6.1.jar')
 }
 
 android {
     compileSdkVersion 19
     buildToolsVersion "23.0.1"
+
+    defaultConfig{
+        minSdkVersion 9
+    }
 
     sourceSets {
         main {
