--- a/YTX_Android_IM_Demo_v5.2.1r_AndroidStudio/app/build.gradle
+++ b/YTX_Android_IM_Demo_v5.2.1r_AndroidStudio/app/build.gradle
@@ -1,8 +1,20 @@
+/**
+ * 在开始使用表情MM SDK之前，开发者需要首先申请到一对AppID和AppSecret，并用它们初始化SDK。
+ * 为了运行本Demo，请在项目根目录下的local.properties中加入如下两行：
+ * bqmm.appID=<申请到的AppID>
+ * bqmm.appSecret=<申请到的AppSecret>
+ *
+ * 以下代码会从local.properties中读取这两个值
+ */
+Properties properties = new Properties()
+properties.load(project.rootProject.file('local.properties').newDataInputStream())
+def bqmmAppID = properties.getProperty('bqmm.appID')
+def bqmmAppSecret = properties.getProperty('bqmm.appSecret')
 apply plugin: 'com.android.application'
 android {
 
-    compileSdkVersion 16
-    buildToolsVersion "20.0.0"
+    compileSdkVersion 21
+    buildToolsVersion "21.1.2"
     defaultConfig {
         applicationId "com.yuntongxun.ecdemo"
         minSdkVersion 10
@@ -14,6 +26,11 @@ android {
                 java.srcDirs = ['src/main/java']
             }
         }
+        /**
+         * 以下代码可以把appID和appSecret写入AndroidManifest
+         */
+        manifestPlaceholders = [bqmmAppID: bqmmAppID, bqmmAppSecret: bqmmAppSecret]
+        multiDexEnabled true
     }
     dependencies {
         compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -26,9 +43,14 @@ android {
         compile files('libs/locSDK_6.13.jar')
         compile files('libs/jsoup-1.7.1.jar')
         compile files('libs/Yuntx_IMLib_v5.2.1r.jar')
+        compile 'com.tencent.bugly:crashreport:latest.release'
 
     }
 
 
 }
 
+
+dependencies {
+    compile project(':BQMM_Lib')
+}
