--- a/YTX_Android_IM_Demo_v5.2.1r_AndroidStudio/app/src/main/AndroidManifest.xml
+++ b/YTX_Android_IM_Demo_v5.2.1r_AndroidStudio/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     android:versionName="5.2.1r" >
 
     <uses-sdk android:minSdkVersion="10" />
+    <uses-permission android:name="android.permission.READ_LOGS"/>
 
     // SDK 权限申明, 第三方 APP 接入时，请将 com.yuntongxun.ecdemo 替换为自己的包名
     // 和下面的 uses-permission 一起加入到你的 AndroidManifest 文件中。
@@ -469,5 +470,61 @@
             android:enabled="true"
             android:process=":remote" >
         </service>
+        <!--BQMM集成-->
+        <!--以下是BQMM包含的Activity-->
+        <activity
+            android:name="com.melink.bqmmsdk.ui.store.EmojiPackageList"
+            android:screenOrientation="portrait"
+            android:theme="@style/bqmm_horizontal_slide" />
+        <activity
+            android:name="com.melink.bqmmsdk.ui.store.EmojiPackageDetail"
+            android:screenOrientation="portrait"
+            android:theme="@style/bqmm_horizontal_slide" />
+        <activity
+            android:name="com.melink.bqmmsdk.ui.store.ServiceDeclaration"
+            android:screenOrientation="portrait"
+            android:theme="@style/bqmm_horizontal_slide" />
+        <activity
+            android:name="com.melink.bqmmsdk.ui.store.EmojiPackageDown"
+            android:screenOrientation="portrait"
+            android:theme="@style/bqmm_horizontal_slide" />
+        <activity
+            android:name="com.melink.bqmmsdk.ui.store.EmojiPackageMyCollection"
+            android:screenOrientation="portrait"
+            android:theme="@style/bqmm_horizontal_slide" />
+        <activity
+            android:name="com.melink.bqmmsdk.ui.store.EmojiPackageSetting"
+            android:screenOrientation="portrait"
+            android:theme="@style/bqmm_horizontal_slide" />
+        <activity
+            android:name="com.melink.bqmmsdk.ui.store.EmojiDetail"
+            android:screenOrientation="portrait"
+            android:theme="@style/bqmm_horizontal_slide" />
+        <activity
+            android:name="com.melink.bqmmsdk.ui.store.EmojiPackageSort"
+            android:screenOrientation="portrait"
+            android:theme="@style/bqmm_horizontal_slide" />
+        <!--BQMM集成-->
+        <!--以下两条metadata的值都是占位符，具体的值是在build.gradle中设置的。如果项目没有使用Android Studio，请把占位符改成实际的ID和Secret-->
+        <meta-data
+            android:name="bqmm_app_id"
+            android:value="${bqmmAppID}" />
+        <meta-data
+            android:name="bqmm_app_secret"
+            android:value="${bqmmAppSecret}" />
+
+        <meta-data
+            android:name="BUGLY_APPID"
+            android:value="03f4416f2f"/>
+        <meta-data
+            android:name="BUGLY_APP_VERSION"
+            android:value="1.6.1"/>
+        <meta-data
+            android:name="BUGLY_APP_CHANNEL"
+            android:value="alpha"/>
+        <meta-data
+            android:name="BUGLY_ENABLE_DEBUG"
+            android:value="false"/>
+
     </application>
 </manifest>
